welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:6: error: illegal start of simple expression
    if()
       ^DwarfCode:7: error: ')' expected but '}' found.
  }
  ^